website/versioned_docs/version-0.28/plugin.md
---
id: version-0.28-plugins
title: Plugins Overview
sidebar_label: Plugins Overview
original_id: plugins
---


## @mapbox/react-native-mapbox-gl


Version: `github:nitaliano/react-native-mapbox-gl`

Platforms: `ios`,`tvos`,`android`,`androidtv`



Npm: https://www.npmjs.com/package/@mapbox/react-native-mapbox-gl

Installation:

```
rnv plugin add @mapbox/react-native-mapbox-gl
```


## @monterosa/react-native-parallax-scroll


Version: `1.8.0`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/@monterosa/react-native-parallax-scroll

Installation:

```
rnv plugin add @monterosa/react-native-parallax-scroll
```


## @react-native-community/async-storage


Version: `1.4.1`

Platforms: `ios`,`tvos`,`android`,`androidtv`



Npm: https://www.npmjs.com/package/@react-native-community/async-storage

Installation:

```
rnv plugin add @react-native-community/async-storage
```


## @react-native-community/blur


Version: `3.3.1`

Platforms: `ios`,`tvos`,`android`,`androidtv`



Npm: https://www.npmjs.com/package/@react-native-community/blur

Installation:

```
rnv plugin add @react-native-community/blur
```


## @react-native-community/cameraroll


Version: `1.2.1`

Platforms: `ios`,`android`



Npm: https://www.npmjs.com/package/@react-native-community/cameraroll

Installation:

```
rnv plugin add @react-native-community/cameraroll
```


## @react-native-community/datetimepicker


Version: `2.1.0`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/@react-native-community/datetimepicker

Installation:

```
rnv plugin add @react-native-community/datetimepicker
```


## @react-native-community/geolocation


Version: `2.0.2`

Platforms: `android`,`ios`



Npm: https://www.npmjs.com/package/@react-native-community/geolocation

Installation:

```
rnv plugin add @react-native-community/geolocation
```


## @react-native-community/masked-view


Version: `0.1.1`

Platforms: `ios`,`tvos`,`android`,`androidtv`



Npm: https://www.npmjs.com/package/@react-native-community/masked-view

Installation:

```
rnv plugin add @react-native-community/masked-view
```


## @react-native-community/netinfo


Version: `4.3.3`

Platforms: `ios`,`tvos`,`android`,`androidtv`,`androidwear`



Npm: https://www.npmjs.com/package/@react-native-community/netinfo

Installation:

```
rnv plugin add @react-native-community/netinfo
```


## @react-native-community/push-notification-ios


Version: `1.0.2`

Platforms: `ios`



Npm: https://www.npmjs.com/package/@react-native-community/push-notification-ios

Installation:

```
rnv plugin add @react-native-community/push-notification-ios
```


## @react-native-community/slider


Version: `2.0.2`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/@react-native-community/slider

Installation:

```
rnv plugin add @react-native-community/slider
```


## @react-native-community/viewpager


Version: `2.0.1`

Platforms: `ios`,`android`



Npm: https://www.npmjs.com/package/@react-native-community/viewpager

Installation:

```
rnv plugin add @react-native-community/viewpager
```


## @react-navigation




Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`





Installation:

```
rnv plugin add @react-navigation
```


## Crashlytics




Platforms: `ios`,`android`,`androidtv`





Installation:

```
rnv plugin add Crashlytics
```


## Fabric




Platforms: `ios`,`android`,`androidtv`





Installation:

```
rnv plugin add Fabric
```


## Firebase/Analytics




Platforms: `ios`





Installation:

```
rnv plugin add Firebase/Analytics
```


## Firebase/Core




Platforms: `ios`





Installation:

```
rnv plugin add Firebase/Core
```


## Firebase/Messaging




Platforms: `ios`





Installation:

```
rnv plugin add Firebase/Messaging
```


## RCTLinkingIOS




Platforms: `ios`





Installation:

```
rnv plugin add RCTLinkingIOS
```


## RCTPushNotification
> RCTPushNotification is DEPRECATED. use @react-native-community/push-notification-ios instead



Platforms: `ios`





Installation:

```
rnv plugin add RCTPushNotification
```


## crashlytics
> crashlytics plugin is deprecated use Crashlytics (uppercase) in combination with Firebase



Platforms: `ios`,`android`





Installation:

```
rnv plugin add crashlytics
```


## detox


Version: `15.1.3`

Platforms: `android`



Npm: https://www.npmjs.com/package/detox

Installation:

```
rnv plugin add detox
```


## fabric
> fabric plugin is deprecated use Fabric (uppercase) in combination with Firebase



Platforms: `ios`,`android`,`androidtv`





Installation:

```
rnv plugin add fabric
```


## firebase-core
> firebase-core plugin is deprecated use Firebase/<SUBMODULE> instead



Platforms: `ios`





Installation:

```
rnv plugin add firebase-core
```


## google-maps




Platforms: `ios`

Props: `API_KEY`



Installation:

```
rnv plugin add google-maps
```


## iOSPhotoEditor




Platforms: `ios`





Installation:

```
rnv plugin add iOSPhotoEditor
```


## ios-photo-editor
> ios-photo-editor is DEPRECATED. use iOSPhotoEditor instead



Platforms: `ios`





Installation:

```
rnv plugin add ios-photo-editor
```


## lottie-react-native


Version: `3.2.1`

Platforms: `ios`,`tvos`,`android`,`androidtv`



Npm: https://www.npmjs.com/package/lottie-react-native

Installation:

```
rnv plugin add lottie-react-native
```


## native-base


Version: `2.12.1`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/native-base

Installation:

```
rnv plugin add native-base
```


## native-base-shoutem-theme


Version: `0.2.3`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/native-base-shoutem-theme

Installation:

```
rnv plugin add native-base-shoutem-theme
```


## react


Version: `16.9.0`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react

Installation:

```
rnv plugin add react
```


## react-art


Version: `16.9.0`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-art

Installation:

```
rnv plugin add react-art
```


## react-dom


Version: `16.9.0`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-dom

Installation:

```
rnv plugin add react-dom
```


## react-hot-loader


Version: `4.3.12`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-hot-loader

Installation:

```
rnv plugin add react-hot-loader
```


## react-native


Version: `0.61.2`

Platforms: `android`,`androidtv`,`androidwear`



Npm: https://www.npmjs.com/package/react-native

Installation:

```
rnv plugin add react-native
```


## react-native-actionsheet


Version: `2.3.0`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-native-actionsheet

Installation:

```
rnv plugin add react-native-actionsheet
```


## react-native-airplay-ios


Version: `github:CHaNGeTe/react-native-airplay-ios#feature/cocoapods-support`

Platforms: `ios`



Npm: https://www.npmjs.com/package/react-native-airplay-ios

Installation:

```
rnv plugin add react-native-airplay-ios
```


## react-native-android-open-settings


Version: `1.3.0`

Platforms: `android`



Npm: https://www.npmjs.com/package/react-native-android-open-settings

Installation:

```
rnv plugin add react-native-android-open-settings
```


## react-native-animatable


Version: `1.2.4`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-native-animatable

Installation:

```
rnv plugin add react-native-animatable
```


## react-native-audio


Version: `4.3.0`

Platforms: `ios`,`tvos`,`android`,`androidtv`



Npm: https://www.npmjs.com/package/react-native-audio

Installation:

```
rnv plugin add react-native-audio
```


## react-native-auth0


Version: `2.1.0`

Platforms: `ios`,`android`

Props: `DOMAIN`

Npm: https://www.npmjs.com/package/react-native-auth0

Installation:

```
rnv plugin add react-native-auth0
```


## react-native-autocomplete-input


Version: `4.1.0`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-native-autocomplete-input

Installation:

```
rnv plugin add react-native-autocomplete-input
```


## react-native-biometrics


Version: `1.6.1`

Platforms: `ios`,`android`



Npm: https://www.npmjs.com/package/react-native-biometrics

Installation:

```
rnv plugin add react-native-biometrics
```


## react-native-ble-manager


Version: `6.2.4`

Platforms: `android`,`androidtv`



Npm: https://www.npmjs.com/package/react-native-ble-manager

Installation:

```
rnv plugin add react-native-ble-manager
```


## react-native-cached-image


Version: `1.4.3`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-native-cached-image

Installation:

```
rnv plugin add react-native-cached-image
```


## react-native-call-log


Version: `2.1.1`

Platforms: `android`,`androidtv`



Npm: https://www.npmjs.com/package/react-native-call-log

Installation:

```
rnv plugin add react-native-call-log
```


## react-native-camera


Version: `3.6.0`

Platforms: `ios`,`android`,`androidtv`



Npm: https://www.npmjs.com/package/react-native-camera

Installation:

```
rnv plugin add react-native-camera
```


## react-native-circular-progress


Version: `1.3.0`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-native-circular-progress

Installation:

```
rnv plugin add react-native-circular-progress
```


## react-native-contacts


Version: `3.1.2`

Platforms: `ios`,`android`,`androidtv`



Npm: https://www.npmjs.com/package/react-native-contacts

Installation:

```
rnv plugin add react-native-contacts
```


## react-native-datepicker


Version: `1.7.2`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-native-datepicker

Installation:

```
rnv plugin add react-native-datepicker
```


## react-native-device-info


Version: `5.4.1`

Platforms: `ios`,`tvos`,`android`,`androidtv`,`androidwear`



Npm: https://www.npmjs.com/package/react-native-device-info

Installation:

```
rnv plugin add react-native-device-info
```


## react-native-dialog


Version: `5.6.0`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-native-dialog

Installation:

```
rnv plugin add react-native-dialog
```


## react-native-document-picker


Version: `3.2.4`

Platforms: `ios`,`android`,`androidtv`



Npm: https://www.npmjs.com/package/react-native-document-picker

Installation:

```
rnv plugin add react-native-document-picker
```


## react-native-dominant-color


Version: `1.0.0`

Platforms: `android`,`androidtv`



Npm: https://www.npmjs.com/package/react-native-dominant-color

Installation:

```
rnv plugin add react-native-dominant-color
```


## react-native-draggable-flatlist


Version: `1.1.7`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-native-draggable-flatlist

Installation:

```
rnv plugin add react-native-draggable-flatlist
```


## react-native-drawer


Version: `0.14.4`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-native-drawer

Installation:

```
rnv plugin add react-native-drawer
```


## react-native-easy-grid


Version: `0.2.1`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-native-easy-grid

Installation:

```
rnv plugin add react-native-easy-grid
```


## react-native-exception-handler


Version: `2.6.0`

Platforms: `ios`,`android`,`androidtv`



Npm: https://www.npmjs.com/package/react-native-exception-handler

Installation:

```
rnv plugin add react-native-exception-handler
```


## react-native-extended-stylesheet


Version: `0.8.0`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-native-extended-stylesheet

Installation:

```
rnv plugin add react-native-extended-stylesheet
```


## react-native-extract-color


Version: `github:kasinskas/react-native-extract-color`

Platforms: `ios`,`tvos`



Npm: https://www.npmjs.com/package/react-native-extract-color

Installation:

```
rnv plugin add react-native-extract-color
```


## react-native-fabric




Platforms: `ios`,`tvos`





Installation:

```
rnv plugin add react-native-fabric
```


## react-native-fast-image


Version: `7.0.2`

Platforms: `ios`,`tvos`,`android`,`androidtv`



Npm: https://www.npmjs.com/package/react-native-fast-image

Installation:

```
rnv plugin add react-native-fast-image
```


## react-native-fbsdk


Version: `1.0.4`

Platforms: `ios`,`android`,`androidtv`

Props: `APP_ID`,`APP_NAME`,`URL_SCHEMES`,`QUERIES_SCHEMES`

Npm: https://www.npmjs.com/package/react-native-fbsdk

Installation:

```
rnv plugin add react-native-fbsdk
```


## react-native-fetch-blob
> react-native-fetch-blob plugin is DEPRECATED. use rn-fetch-blob instead

Version: `0.10.8`

Platforms: `ios`,`tvos`,`android`,`androidtv`



Npm: https://www.npmjs.com/package/react-native-fetch-blob

Installation:

```
rnv plugin add react-native-fetch-blob
```


## react-native-fingerprint-scanner


Version: `3.0.0`

Platforms: `ios`,`android`



Npm: https://www.npmjs.com/package/react-native-fingerprint-scanner

Installation:

```
rnv plugin add react-native-fingerprint-scanner
```


## react-native-firebase


Version: `5.5.5`

Platforms: `ios`,`android`,`androidtv`

Props: `URL_SCHEME`,`URL_NAME`

Npm: https://www.npmjs.com/package/react-native-firebase

Installation:

```
rnv plugin add react-native-firebase
```


## react-native-fs


Version: `2.14.1`

Platforms: `ios`,`tvos`,`android`,`androidtv`



Npm: https://www.npmjs.com/package/react-native-fs

Installation:

```
rnv plugin add react-native-fs
```


## react-native-gesture-handler


Version: `1.4.1`

Platforms: `ios`,`tvos`,`android`,`androidtv`,`androidwear`



Npm: https://www.npmjs.com/package/react-native-gesture-handler

Installation:

```
rnv plugin add react-native-gesture-handler
```


## react-native-get-real-path


Version: `1.0.0`

Platforms: `android`,`androidtv`



Npm: https://www.npmjs.com/package/react-native-get-real-path

Installation:

```
rnv plugin add react-native-get-real-path
```


## react-native-google-cast


Version: `github:hosek/react-native-google-cast#feat/custom-cast-dialog-support`

Platforms: `ios`,`android`



Npm: https://www.npmjs.com/package/react-native-google-cast

Installation:

```
rnv plugin add react-native-google-cast
```


## react-native-idle-timer


Version: `2.1.5`

Platforms: `ios`,`android`,`androidtv`



Npm: https://www.npmjs.com/package/react-native-idle-timer

Installation:

```
rnv plugin add react-native-idle-timer
```


## react-native-image-cache-manager


Version: `1.0.1`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-native-image-cache-manager

Installation:

```
rnv plugin add react-native-image-cache-manager
```


## react-native-image-crop-picker


Version: `0.25.3`

Platforms: `ios`,`android`,`androidtv`



Npm: https://www.npmjs.com/package/react-native-image-crop-picker

Installation:

```
rnv plugin add react-native-image-crop-picker
```


## react-native-image-picker


Version: `0.27.1`

Platforms: `ios`,`android`,`androidtv`



Npm: https://www.npmjs.com/package/react-native-image-picker

Installation:

```
rnv plugin add react-native-image-picker
```


## react-native-image-resizer


Version: `1.0.0`

Platforms: `ios`,`tvos`,`android`,`androidtv`



Npm: https://www.npmjs.com/package/react-native-image-resizer

Installation:

```
rnv plugin add react-native-image-resizer
```


## react-native-keep-awake


Version: `4.0.0`

Platforms: `ios`,`android`,`androidtv`



Npm: https://www.npmjs.com/package/react-native-keep-awake

Installation:

```
rnv plugin add react-native-keep-awake
```


## react-native-keyboard-aware-scroll-view


Version: `0.9.1`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-native-keyboard-aware-scroll-view

Installation:

```
rnv plugin add react-native-keyboard-aware-scroll-view
```


## react-native-keyboard-spacer


Version: `0.4.1`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-native-keyboard-spacer

Installation:

```
rnv plugin add react-native-keyboard-spacer
```


## react-native-languages
> react-native-languages has been DEPRECATED. use react-native-localize instead

Version: `3.0.2`

Platforms: `ios`,`android`,`androidtv`



Npm: https://www.npmjs.com/package/react-native-languages

Installation:

```
rnv plugin add react-native-languages
```


## react-native-linear-gradient


Version: `2.4.0`

Platforms: `ios`,`tvos`,`android`,`androidtv`,`androidwear`



Npm: https://www.npmjs.com/package/react-native-linear-gradient

Installation:

```
rnv plugin add react-native-linear-gradient
```


## react-native-local-mongodb


Version: `2.2.4`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-native-local-mongodb

Installation:

```
rnv plugin add react-native-local-mongodb
```


## react-native-localize


Version: `1.3.0`

Platforms: `ios`,`android`,`androidtv`



Npm: https://www.npmjs.com/package/react-native-localize

Installation:

```
rnv plugin add react-native-localize
```


## react-native-maps


Version: `0.19.0`

Platforms: `ios`



Npm: https://www.npmjs.com/package/react-native-maps

Installation:

```
rnv plugin add react-native-maps
```


## react-native-markdown-renderer


Version: `3.2.8`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-native-markdown-renderer

Installation:

```
rnv plugin add react-native-markdown-renderer
```


## react-native-material-dialog


Version: `0.7.6`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-native-material-dialog

Installation:

```
rnv plugin add react-native-material-dialog
```


## react-native-material-dropdown


Version: `0.11.1`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-native-material-dropdown

Installation:

```
rnv plugin add react-native-material-dropdown
```


## react-native-modal


Version: `7.0.0`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-native-modal

Installation:

```
rnv plugin add react-native-modal
```


## react-native-navigation-bar-color


Version: `1.0.0`

Platforms: `android`,`androidtv`



Npm: https://www.npmjs.com/package/react-native-navigation-bar-color

Installation:

```
rnv plugin add react-native-navigation-bar-color
```


## react-native-nfc-manager


Version: `1.2.2`

Platforms: `ios`,`android`,`androidtv`



Npm: https://www.npmjs.com/package/react-native-nfc-manager

Installation:

```
rnv plugin add react-native-nfc-manager
```


## react-native-onfido-sdk


Version: `0.0.7`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-native-onfido-sdk

Installation:

```
rnv plugin add react-native-onfido-sdk
```


## react-native-orientation-locker


Version: `1.1.5`

Platforms: `ios`,`android`



Npm: https://www.npmjs.com/package/react-native-orientation-locker

Installation:

```
rnv plugin add react-native-orientation-locker
```


## react-native-pdf


Version: `5.0.6`

Platforms: `ios`,`android`,`androidtv`



Npm: https://www.npmjs.com/package/react-native-pdf

Installation:

```
rnv plugin add react-native-pdf
```


## react-native-pdf-view


Version: `0.3.2`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-native-pdf-view

Installation:

```
rnv plugin add react-native-pdf-view
```


## react-native-permissions


Version: `1.1.1`

Platforms: `ios`



Npm: https://www.npmjs.com/package/react-native-permissions

Installation:

```
rnv plugin add react-native-permissions
```


## react-native-photo-editor


Version: `1.0.5`

Platforms: `ios`,`android`,`androidtv`



Npm: https://www.npmjs.com/package/react-native-photo-editor

Installation:

```
rnv plugin add react-native-photo-editor
```


## react-native-picker


Version: `4.3.7`

Platforms: `ios`,`android`,`androidtv`



Npm: https://www.npmjs.com/package/react-native-picker

Installation:

```
rnv plugin add react-native-picker
```


## react-native-picker-select


Version: `6.3.3`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-native-picker-select

Installation:

```
rnv plugin add react-native-picker-select
```


## react-native-progress


Version: `3.5.0`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-native-progress

Installation:

```
rnv plugin add react-native-progress
```


## react-native-prompt-android


Version: `0.3.5`

Platforms: `android`,`androidtv`



Npm: https://www.npmjs.com/package/react-native-prompt-android

Installation:

```
rnv plugin add react-native-prompt-android
```


## react-native-reanimated


Version: `1.0.0-alpha.12`

Platforms: `ios`,`tvos`,`android`,`androidtv`,`androidwear`



Npm: https://www.npmjs.com/package/react-native-reanimated

Installation:

```
rnv plugin add react-native-reanimated
```


## react-native-render-html


Version: `4.1.1`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-native-render-html

Installation:

```
rnv plugin add react-native-render-html
```


## react-native-root-toast


Version: `2.2.1`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-native-root-toast

Installation:

```
rnv plugin add react-native-root-toast
```


## react-native-safe-area-context


Version: `0.7.2`

Platforms: `android`,`androidtv`,`androidwear`,`ios`,`tvos`



Npm: https://www.npmjs.com/package/react-native-safe-area-context

Installation:

```
rnv plugin add react-native-safe-area-context
```


## react-native-safe-area-view


Version: `0.14.5`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-native-safe-area-view

Installation:

```
rnv plugin add react-native-safe-area-view
```


## react-native-screens


Version: `2.2.0`

Platforms: `ios`,`tvos`,`android`,`androidtv`



Npm: https://www.npmjs.com/package/react-native-screens

Installation:

```
rnv plugin add react-native-screens
```


## react-native-sensors


Version: `5.3.3`

Platforms: `ios`,`android`,`androidtv`



Npm: https://www.npmjs.com/package/react-native-sensors

Installation:

```
rnv plugin add react-native-sensors
```


## react-native-signature-capture


Version: `0.4.9`

Platforms: `ios`,`android`,`androidtv`



Npm: https://www.npmjs.com/package/react-native-signature-capture

Installation:

```
rnv plugin add react-native-signature-capture
```


## react-native-simple-compass


Version: `github:cjrorvik/react-native-simple-compass.git#9c133bd0922204bb78e5fc0b2d85dfd5a647732d`

Platforms: `ios`,`android`,`androidtv`



Npm: https://www.npmjs.com/package/react-native-simple-compass

Installation:

```
rnv plugin add react-native-simple-compass
```


## react-native-simple-radio-button


Version: `2.7.3`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-native-simple-radio-button

Installation:

```
rnv plugin add react-native-simple-radio-button
```


## react-native-simple-shadow-view


Version: `1.6.3`

Platforms: `android`



Npm: https://www.npmjs.com/package/react-native-simple-shadow-view

Installation:

```
rnv plugin add react-native-simple-shadow-view
```


## react-native-snap-carousel


Version: `3.7.5`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-native-snap-carousel

Installation:

```
rnv plugin add react-native-snap-carousel
```


## react-native-sound


Version: `0.11.0`

Platforms: `ios`,`android`



Npm: https://www.npmjs.com/package/react-native-sound

Installation:

```
rnv plugin add react-native-sound
```


## react-native-sqlite-storage


Version: `3.3.11`

Platforms: `android`,`androidtv`,`ios`,`tvos`



Npm: https://www.npmjs.com/package/react-native-sqlite-storage

Installation:

```
rnv plugin add react-native-sqlite-storage
```


## react-native-svg


Version: `9.4.0`

Platforms: `ios`,`tvos`,`android`,`androidtv`,`androidwear`



Npm: https://www.npmjs.com/package/react-native-svg

Installation:

```
rnv plugin add react-native-svg
```


## react-native-svg-charts


Version: `5.3.0`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-native-svg-charts

Installation:

```
rnv plugin add react-native-svg-charts
```


## react-native-swipeout


Version: `2.3.3`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-native-swipeout

Installation:

```
rnv plugin add react-native-swipeout
```


## react-native-system-setting


Version: `1.7.2`

Platforms: `ios`,`android`,`androidtv`



Npm: https://www.npmjs.com/package/react-native-system-setting

Installation:

```
rnv plugin add react-native-system-setting
```


## react-native-tab-view


Version: `2.13.0`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-native-tab-view

Installation:

```
rnv plugin add react-native-tab-view
```


## react-native-uri-scheme


Version: `1.0.16`

Platforms: `android`,`ios`



Npm: https://www.npmjs.com/package/react-native-uri-scheme

Installation:

```
rnv plugin add react-native-uri-scheme
```


## react-native-vector-icons


Version: `6.6.0`

Platforms: `ios`,`tvos`,`android`,`androidtv`,`androidwear`



Npm: https://www.npmjs.com/package/react-native-vector-icons

Installation:

```
rnv plugin add react-native-vector-icons
```


## react-native-video


Version: `5.0.2`

Platforms: `ios`,`tvos`,`android`,`androidtv`



Npm: https://www.npmjs.com/package/react-native-video

Installation:

```
rnv plugin add react-native-video
```


## react-native-view-overflow


Version: `0.0.4`

Platforms: `android`



Npm: https://www.npmjs.com/package/react-native-view-overflow

Installation:

```
rnv plugin add react-native-view-overflow
```


## react-native-viewpager


Version: `0.2.13`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-native-viewpager

Installation:

```
rnv plugin add react-native-viewpager
```


## react-native-web


Version: `0.11.7`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-native-web

Installation:

```
rnv plugin add react-native-web
```


## react-native-web-image-loader


Version: `0.0.5`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-native-web-image-loader

Installation:

```
rnv plugin add react-native-web-image-loader
```


## react-native-webrtc


Version: `1.75.2`

Platforms: `ios`,`android`,`androidtv`



Npm: https://www.npmjs.com/package/react-native-webrtc

Installation:

```
rnv plugin add react-native-webrtc
```


## react-native-webview


Version: `7.4.1`

Platforms: `ios`,`android`,`androidtv`



Npm: https://www.npmjs.com/package/react-native-webview

Installation:

```
rnv plugin add react-native-webview
```


## react-native-webview-bridge


Version: `0.40.1`

Platforms: `ios`,`android`,`androidtv`



Npm: https://www.npmjs.com/package/react-native-webview-bridge

Installation:

```
rnv plugin add react-native-webview-bridge
```


## react-native-zip-archive


Version: `4.0.2`

Platforms: `ios`,`android`,`androidtv`



Npm: https://www.npmjs.com/package/react-native-zip-archive

Installation:

```
rnv plugin add react-native-zip-archive
```


## react-native-zss-rich-text-editor


Version: `1.1.0`

Platforms: `android`,`androidtv`



Npm: https://www.npmjs.com/package/react-native-zss-rich-text-editor

Installation:

```
rnv plugin add react-native-zss-rich-text-editor
```


## react-navigation


Version: `3.9.2`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-navigation

Installation:

```
rnv plugin add react-navigation
```


## react-navigation-drawer


Version: `2.3.3`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-navigation-drawer

Installation:

```
rnv plugin add react-navigation-drawer
```


## react-navigation-stack


Version: `1.4.0`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-navigation-stack

Installation:

```
rnv plugin add react-navigation-stack
```


## react-navigation-tabs


Version: `2.0.0-alpha.0`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-navigation-tabs

Installation:

```
rnv plugin add react-navigation-tabs
```


## react-web-vector-icons


Version: `1.0.2`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/react-web-vector-icons

Installation:

```
rnv plugin add react-web-vector-icons
```


## renative


Version: `0.28.19-alpha.5`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/renative

Installation:

```
rnv plugin add renative
```


## rn-fetch-blob


Version: `0.11.2`

Platforms: `ios`,`android`,`androidtv`



Npm: https://www.npmjs.com/package/rn-fetch-blob

Installation:

```
rnv plugin add rn-fetch-blob
```


## static-container


Version: `1.3.0`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/static-container

Installation:

```
rnv plugin add static-container
```


## svgs


Version: `4.1.0`

Platforms: `ios`,`android`,`androidtv`,`androidwear`,`web`,`tizen`,`tizenmobile`,`tvos`,`webos`,`macos`,`windows`,`tizenwatch`,`kaios`,`firefoxos`,`firefoxtv`



Npm: https://www.npmjs.com/package/svgs

Installation:

```
rnv plugin add svgs
```
